--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Home page</h1>
         <div>This is a div element</div>
+        <p>This is a para</p>
     </body>
 </html>
