--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Home page</h1>
         <div>This is a div element</div>
         <p>This is a para</p>
+        <p>This para is added at the development branch</p>
     </body>
 </html>
