--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <div>This is a div element</div>
         <p>This is a para</p>
         <p>This para is added at the development branch</p>
+        <form>
+            <input type=""text">
+            <input type=""submit">
+        </form>
     </body>
 </html>
