--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <div>This is a div element</div>
         <p>This is a para</p>
         <p>This para is added at the development branch</p>
+        <div>Div1</div>
+        <div>Div2</div>
     </body>
 </html>
